--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,4 +1,4 @@
-name: preview-automerge
+name: auto-merge
 
 on:
   pull_request:
@@ -6,17 +6,16 @@ on:
 
 permissions:
   contents: write
-  pull-requests: read
+  pull-requests: write
 
 jobs:
-  merge-branch-content:
+  merge-to-preview:
     runs-on: ubuntu-latest
     if: contains(github.event.pull_request.labels.*.name, 'preview-target')
     steps:
-      - name: Checkout target branch
+      - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          ref: ${{ github.event.pull_request.base.ref }}
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -25,13 +24,18 @@ jobs:
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
 
-      - name: Find preview PRs
-        id: find-prs
+      - name: Find preview PRs and merge content
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          # 現在のPR（preview-target）のブランチ情報を取得
+          TARGET_BRANCH="${{ github.event.pull_request.head.ref }}"
+          TARGET_SHA="${{ github.event.pull_request.head.sha }}"
+          echo "Current PR branch: $TARGET_BRANCH (SHA: $TARGET_SHA)"
+
+          # GitHub REST APIを使用して「preview」ラベルがついたすべてのPRを検索
           RESPONSE=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
-            "https://api.github.com/repos/${{ github.repository }}/pulls?state=open&labels=hiyoko/preview")
+            "https://api.github.com/repos/${{ github.repository }}/pulls?state=open&labels=preview")
 
           # 検索結果からPR数を取得
           PR_COUNT=$(echo $RESPONSE | jq '. | length')
@@ -43,29 +47,39 @@ jobs:
 
           echo "Found $PR_COUNT PRs with preview label"
 
-          # すべてのプレビューPRのブランチ情報を抽出
+          # すべてのプレビューPRに対して処理
           for i in $(seq 0 $(($PR_COUNT - 1))); do
             PR_NUMBER=$(echo $RESPONSE | jq -r ".[$i].number")
-            PR_BRANCH=$(echo $RESPONSE | jq -r ".[$i].head.ref")
-            PR_REPO=$(echo $RESPONSE | jq -r ".[$i].head.repo.clone_url")
+            PREVIEW_BRANCH=$(echo $RESPONSE | jq -r ".[$i].head.ref")
             
-            echo "PR #$PR_NUMBER uses branch: $PR_BRANCH from $PR_REPO"
+            echo "Processing preview PR #$PR_NUMBER (branch: $PREVIEW_BRANCH)"
             
-            # リモートを追加してフェッチ
-            REMOTE_NAME="preview-${PR_NUMBER}"
-            git remote add $REMOTE_NAME $PR_REPO
-            git fetch $REMOTE_NAME $PR_BRANCH
+            # プレビューブランチをチェックアウト
+            git fetch origin $PREVIEW_BRANCH
+            git checkout $PREVIEW_BRANCH
             
-            # ブランチの内容をマージ (マージコミットを作成)
-            echo "Merging content from PR #$PR_NUMBER (branch $PR_BRANCH)"
-            if git merge --no-ff $REMOTE_NAME/$PR_BRANCH -m "Merge preview content from PR #$PR_NUMBER (branch $PR_BRANCH)"; then
-              echo "✅ Successfully merged content from PR #$PR_NUMBER"
+            # preview-targetブランチの内容をマージ（直接コミットとして適用）
+            echo "Applying changes from $TARGET_BRANCH to $PREVIEW_BRANCH"
+            if git merge --no-ff origin/$TARGET_BRANCH -m "Apply preview-target changes from $TARGET_BRANCH"; then
+              # 変更をプッシュ
+              git push origin $PREVIEW_BRANCH
+              echo "✅ Successfully applied changes to preview branch $PREVIEW_BRANCH"
+              
+              # PRにコメントを追加
+              curl -s -X POST \
+                -H "Authorization: token $GITHUB_TOKEN" \
+                -H "Accept: application/vnd.github.v3+json" \
+                "https://api.github.com/repos/${{ github.repository }}/issues/$PR_NUMBER/comments" \
+                -d "{\"body\":\"✅ Preview updated with changes from branch \`$TARGET_BRANCH\` (SHA: $TARGET_SHA)\"}"
             else
-              echo "❌ Failed to merge content from PR #$PR_NUMBER due to conflicts"
-              # マージ競合をリセット
+              echo "❌ Failed to apply changes due to conflicts"
               git merge --abort
+              
+              # PRにコメントを追加
+              curl -s -X POST \
+                -H "Authorization: token $GITHUB_TOKEN" \
+                -H "Accept: application/vnd.github.v3+json" \
+                "https://api.github.com/repos/${{ github.repository }}/issues/$PR_NUMBER/comments" \
+                -d "{\"body\":\"❌ Failed to update preview with changes from \`$TARGET_BRANCH\` due to merge conflicts. Manual intervention required.\"}"
             fi
           done
-
-          # 変更をプッシュ
-          git push origin ${{ github.event.pull_request.base.ref }}
