--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -9,7 +9,7 @@ permissions:
   pull-requests: write
 
 jobs:
-  merge-to-preview:
+  update-preview:
     runs-on: ubuntu-latest
     if: contains(github.event.pull_request.labels.*.name, 'preview-target')
     steps:
@@ -24,15 +24,28 @@ jobs:
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
 
-      - name: Find preview PRs and merge content
+      - name: Get target branch content
+        env:
+          TARGET_BRANCH: ${{ github.event.pull_request.head.ref }}
+          TARGET_SHA: ${{ github.event.pull_request.head.sha }}
+        run: |
+          echo "Target branch: $TARGET_BRANCH (SHA: $TARGET_SHA)"
+
+          # target-previewブランチの内容を取得
+          git fetch origin $TARGET_BRANCH
+
+          # 変更内容を一時ディレクトリに保存
+          mkdir -p /tmp/target-changes
+          git archive origin/$TARGET_BRANCH | tar -x -C /tmp/target-changes
+
+          echo "Target branch content saved to /tmp/target-changes"
+
+      - name: Find preview PRs and apply changes
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TARGET_BRANCH: ${{ github.event.pull_request.head.ref }}
+          TARGET_SHA: ${{ github.event.pull_request.head.sha }}
         run: |
-          # 現在のPR（preview-target）のブランチ情報を取得
-          TARGET_BRANCH="${{ github.event.pull_request.head.ref }}"
-          TARGET_SHA="${{ github.event.pull_request.head.sha }}"
-          echo "Current PR branch: $TARGET_BRANCH (SHA: $TARGET_SHA)"
-
           # GitHub REST APIを使用して「preview」ラベルがついたすべてのPRを検索
           RESPONSE=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
             "https://api.github.com/repos/${{ github.repository }}/pulls?state=open&labels=preview")
@@ -56,30 +69,34 @@ jobs:
             
             # プレビューブランチをチェックアウト
             git fetch origin $PREVIEW_BRANCH
-            git checkout $PREVIEW_BRANCH
+            git checkout -B $PREVIEW_BRANCH origin/$PREVIEW_BRANCH
             
-            # preview-targetブランチの内容をマージ（直接コミットとして適用）
+            # 現在のブランチの状態を保存
+            CURRENT_SHA=$(git rev-parse HEAD)
+            
+            # 変更を適用（コピーして追加）
             echo "Applying changes from $TARGET_BRANCH to $PREVIEW_BRANCH"
-            if git merge --no-ff origin/$TARGET_BRANCH -m "Apply preview-target changes from $TARGET_BRANCH"; then
-              # 変更をプッシュ
-              git push origin $PREVIEW_BRANCH
-              echo "✅ Successfully applied changes to preview branch $PREVIEW_BRANCH"
-              
-              # PRにコメントを追加
-              curl -s -X POST \
-                -H "Authorization: token $GITHUB_TOKEN" \
-                -H "Accept: application/vnd.github.v3+json" \
-                "https://api.github.com/repos/${{ github.repository }}/issues/$PR_NUMBER/comments" \
-                -d "{\"body\":\"✅ Preview updated with changes from branch \`$TARGET_BRANCH\` (SHA: $TARGET_SHA)\"}"
-            else
-              echo "❌ Failed to apply changes due to conflicts"
-              git merge --abort
-              
-              # PRにコメントを追加
-              curl -s -X POST \
-                -H "Authorization: token $GITHUB_TOKEN" \
-                -H "Accept: application/vnd.github.v3+json" \
-                "https://api.github.com/repos/${{ github.repository }}/issues/$PR_NUMBER/comments" \
-                -d "{\"body\":\"❌ Failed to update preview with changes from \`$TARGET_BRANCH\` due to merge conflicts. Manual intervention required.\"}"
+            cp -r /tmp/target-changes/* ./
+            
+            # 変更があるか確認
+            if git diff --quiet; then
+              echo "No changes to apply"
+              continue
             fi
+            
+            # 変更をコミット
+            git add .
+            git commit -m "Apply changes from $TARGET_BRANCH (SHA: $TARGET_SHA)"
+            
+            # 変更をプッシュ
+            git push origin $PREVIEW_BRANCH
+            
+            echo "✅ Successfully applied changes to preview branch $PREVIEW_BRANCH"
+            
+            # PRにコメントを追加
+            curl -s -X POST \
+              -H "Authorization: token $GITHUB_TOKEN" \
+              -H "Accept: application/vnd.github.v3+json" \
+              "https://api.github.com/repos/${{ github.repository }}/issues/$PR_NUMBER/comments" \
+              -d "{\"body\":\"✅ Preview updated with changes from branch \`$TARGET_BRANCH\` (SHA: $TARGET_SHA)\"}"
           done
