--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -52,6 +52,7 @@ jobs:
           FAILED_BRANCHES=""
 
           # GitHub REST APIを使用して「preview」ラベルがついたすべてのPRを検索
+          # state=openを明示的に指定し、ラベルフィルタを厳密に適用
           RESPONSE=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
             "https://api.github.com/repos/${{ github.repository }}/pulls?state=open&labels=preview")
 
@@ -69,6 +70,16 @@ jobs:
           for i in $(seq 0 $(($PR_COUNT - 1))); do
             PR_NUMBER=$(echo $RESPONSE | jq -r ".[$i].number")
             PREVIEW_BRANCH=$(echo $RESPONSE | jq -r ".[$i].head.ref")
+            
+            # 念のため、PRのラベルを直接確認
+            LABELS=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
+              "https://api.github.com/repos/${{ github.repository }}/issues/$PR_NUMBER/labels")
+            
+            # previewラベルが本当についているか確認
+            if ! echo $LABELS | jq -e '.[] | select(.name == "preview")' > /dev/null; then
+              echo "PR #$PR_NUMBER does not have preview label. Skipping."
+              continue
+            fi
             
             echo "Processing preview PR #$PR_NUMBER (branch: $PREVIEW_BRANCH)"
             
