--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -22,6 +22,9 @@ jobs:
           TARGET_BRANCH: ${{ github.event.pull_request.head.ref }}
           TARGET_SHA: ${{ github.event.pull_request.head.sha }}
         run: |
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+
           RESPONSE=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
             "https://api.github.com/repos/${{ github.repository }}/pulls?state=open")
 
